--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "next": "10.0.7",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-validation": "^3.0.7",
+    "tachyons": "^4.12.0",
+    "validator": "^13.5.2"
   }
 }
