--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.0.0-beta2",
     "cors": "^2.8.5",
+    "gray-matter": "^4.0.2",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
