--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta2",
     "cors": "^2.8.5",
+    "express-fileupload": "^1.2.1",
     "gray-matter": "^4.0.2",
     "next": "10.0.7",
     "react": "17.0.1",
