--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-modal": "^3.12.1",
     "react-validation": "^3.0.7",
     "tachyons": "^4.12.0",
     "validator": "^13.5.2"
