--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootbox": "^5.5.2",
-    "bootstrap": "^5.0.0-beta2",
+    "bootstrap": "^5.0.0-beta3",
     "cors": "^2.8.5",
     "express-fileupload": "^1.2.1",
     "gray-matter": "^4.0.2",
     "next": "10.0.7",
     "react": "17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.1",
     "react-fitty": "^1.0.1",
     "react-modal": "^3.12.1",
