--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gray-matter": "^4.0.2",
     "next": "10.0.7",
     "react": "17.0.1",
+    "react-axios": "^2.0.5",
     "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.1",
     "react-fitty": "^1.0.1",
