--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "bootbox": "^5.5.2",
     "bootstrap": "^5.0.0-beta3",
+    "compress-js": "^2.0.2",
     "cors": "^2.8.5",
     "express-fileupload": "^1.2.1",
     "gray-matter": "^4.0.2",
@@ -20,6 +21,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.1",
     "react-fitty": "^1.0.1",
+    "react-image-file-resizer": "^0.4.3",
     "react-modal": "^3.12.1",
     "react-validation": "^3.0.7",
     "tachyons": "^4.12.0",
